# memgraph

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  graphlet-memory-analyzer-design.md  pyproject.toml
.github/workflows/: test.yml
docs/: patterns.md  quickstart.md  troubleshooting.md
examples/: Makefile  README.md  linked_list.c  random_access.c  sequential  sequential.c  small_test  small_test.c  strided.c  working_set.c
samples/: linked_list_report.json  random_access_cli_output.txt  sequential_report.html
src/memgraph/: __init__.py  cli.py
src/memgraph/classifier/: __init__.py  distance.py  patterns.py
src/memgraph/graph/: __init__.py  builder.py  coarsening.py  serialization.py  stats.py  windowing.py
src/memgraph/graphlets/: __init__.py  definitions.py  enumeration.py  sampling.py  signatures.py
src/memgraph/report/: __init__.py  cli_report.py  html_report.py  json_report.py  result.py
src/memgraph/report/templates/: report.html.j2
src/memgraph/trace/: __init__.py  generator.py  models.py  parser.py
src/memgraph/trace/formats/: __init__.py  base.py  csv.py  lackey.py  native.py
src/memgraph/tracer/: __init__.py  config.py  exceptions.py  valgrind.py
src/memgraph/utils/: logging.py
src/memgraph/visualization/: __init__.py  charts.py  colors.py  graph_viz.py
tests/: __init__.py  conftest.py  test_classifier_distance.py  test_classifier_patterns.py  test_cli_report.py  test_coarsening.py  test_generator.py  test_graph_builder.py  test_graphlet_enumeration.py  test_graphlet_sampling.py  test_html_report.py  test_json_report.py  test_parser.py  test_result.py  test_signatures.py  test_valgrind_wrapper.py  test_visualization.py  test_windowing.py
