[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memgraph"
version = "0.1.0"
description = "Memory access pattern analysis using graphlet analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MemGraph Contributors"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "jinja2>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
]
viz = [
    "matplotlib>=3.7",
    "pyvis>=0.3",
]

[project.scripts]
memgraph = "memgraph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memgraph = ["py.typed", "report/templates/*.j2", "report/templates/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=memgraph",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
